kubernetes/apps/home-automation/arr-stack/jackett-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  labels:
    app: jackett

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
  template:
    metadata:
      labels:
        app: jackett

    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jackett
          image: linuxserver/jackett:latest
          ports:
            - name: http
              containerPort: 9117

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: jackett/config

          resources:
            limits:
              cpu: 300m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
