kubernetes/apps/home-automation/arr-stack/jellyseerr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app: jellyseerr

spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyseerr
  template:
    metadata:
      labels:
        app: jellyseerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: jellyseerr
          image: fallenbagel/jellyseerr:latest

          ports:
            - name: jellyseerr
              containerPort: 5055

          volumeMounts:
            - name: homelab-storage
              mountPath: /app/config
              subPath: jellyseerr/app/config
            - name: homelab-storage
              mountPath: /app/db
              subPath: jellyseerr/app/db

          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 200m
              memory: 256Mi

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
