kubernetes/apps/home-automation/arr-stack/prowlarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr

spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: prowlarr
          image: linuxserver/prowlarr:latest

          ports:
            - name: prowlarr
              containerPort: 9696

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: prowlarr/config

          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 512Mi

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
