kubernetes/apps/home-automation/arr-stack/radarr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr

spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: radarr
          image: linuxserver/radarr:latest

          ports:
            - name: radarr
              containerPort: 7878

          volumeMounts:
            - name: homelab-storage
              mountPath: /config
              subPath: radarr/config
            - name: homelab-storage
              mountPath: /movies
              subPath: streaming/media/movies
            - name: homelab-storage
              mountPath: /downloads
              subPath: streaming/torrents

          resources:
            limits:
              cpu: 500m
              memory: 1Gi
            requests:
              cpu: 300m
              memory: 512Mi

      volumes:
        - name: homelab-storage
          persistentVolumeClaim:
            claimName: homelab-nfs-pvc
