kubernetes/apps/home-automation/arr-stack/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-jellyseerr
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 35055
        name: http

---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-sonarr
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 38989
        name: http

---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-radarr
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 37878
        name: http

---
apiVersion: v1
kind: Endpoints
metadata:
  name: ugreen-nas-prowlarr
  namespace: home-automation
subsets:
  - addresses:
      - ip: 192.168.50.254
    ports:
      - port: 39696
        name: http
