kubernetes/apps/home-automation/arr-stack/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-jellyseerr
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 35055
      targetPort: 35055
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-sonarr
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 38989
      targetPort: 38989
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-radarr
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 37878
      targetPort: 37878
      protocol: TCP
      name: http

---
apiVersion: v1
kind: Service
metadata:
  name: ugreen-nas-prowlarr
  namespace: home-automation
spec:
  type: ClusterIP
  ports:
    - port: 39696
      targetPort: 39696
      protocol: TCP
      name: http
