kubernetes/apps/home-automation/arr-stack/serviceaccount.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: gluetun
  namespace: home-automation
spec:
  selector:
    app: arr-stack
  ports:
    - name: http-proxy
      protocol: TCP
      port: 8888
      targetPort: 8888
    - name: ss-tcp
      protocol: TCP
      port: 8388
      targetPort: 8388
    - name: ss-udp
      protocol: UDP
      port: 8388
      targetPort: 8388
