kubernetes/apps/home-automation/arr-stack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr-stack-ingress
  namespace: home-automation
  annotations:
    external-dns.alpha.kubernetes.io/target: "external.rutberg.dev"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"

spec:
  ingressClassName: external

  tls:
    - hosts:
        - jellyseerr.rutberg.dev
      secretName: jellyseerr-tls
    - hosts:
        - sonarr.rutberg.dev
      secretName: sonarr-tls
    - hosts:
        - radarr.rutberg.dev
      secretName: radarr-tls
    - hosts:
        - prowlarr.rutberg.dev
      secretName: prowlarr-tls

  rules:
    - host: jellyseerr.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ugreen-nas-jellyseerr
                port:
                  number: 35055
    - host: sonarr.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ugreen-nas-sonarr
                port:
                  number: 38989
    - host: radarr.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ugreen-nas-radarr
                port:
                  number: 37878
    - host: prowlarr.rutberg.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ugreen-nas-prowlarr
                port:
                  number: 39696
